--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
         <h1>Recipe Book</h1>
         <p class="description">Keeping track of the recipes I want to watch and try.</p>
     </header>
-    <rb-recipe-item></rb-recipe-item>
+    <rb-recipe-item [recipeItem]="firstRecipeItem"></rb-recipe-item>
 </section>
