Structural Directive - ngFor

--- a/src/app/recipe-item-list.component.html
+++ b/src/app/recipe-item-list.component.html
@@ -1,4 +1,6 @@
 <section>
-  <rb-recipe-item (delete)="onRecipeItemDelete($event)" 
-        [recipeItem]="recipeItems[2]"></rb-recipe-item>
+  <rb-recipe-item
+    *ngFor = "let recipeItem of recipeItems" 
+    (delete)="onRecipeItemDelete($event)" 
+    [recipeItem]="recipeItem"></rb-recipe-item>
 </section>
