--- a/src/app/recipe-item.component.html
+++ b/src/app/recipe-item.component.html
@@ -1,4 +1,5 @@
 <h2>{{ recipeItem.name }}</h2>
+<div>{{ recipeItem.medium }}</div>
 <div *ngIf="recipeItem.isFavorite">{{ recipeItem.watchedOn }}</div>
 <div>{{ recipeItem.category }}</div>
 <div>{{ recipeItem.year }}</div>
