Angular pipes: Custom

--- a/src/app/recipe-item-list.component.html
+++ b/src/app/recipe-item-list.component.html
@@ -1,4 +1,7 @@
 <section>
+  <header>
+    <div>{{ recipeItems | categoryList }}</div>
+  </header>
   <rb-recipe-item
     *ngFor = "let recipeItem of recipeItems" 
     (delete)="onRecipeItemDelete($event)" 
