--- a/src/app/recipe-item.component.html
+++ b/src/app/recipe-item.component.html
@@ -1,4 +1,4 @@
-<h2>{{ recipeItem.name | slice: 0: 10  | uppercase}}</h2>
+<h2>{{ recipeItem.name }}</h2>
 <div>{{ recipeItem.medium }}</div>
 <div *ngIf="recipeItem.watchedOn">{{ recipeItem.watchedOn | date: 'shortDate' }}</div>
 <div>{{ recipeItem.category }}</div>
