--- a/src/app/recipe-item-form.component.html
+++ b/src/app/recipe-item-form.component.html
@@ -1,23 +1,24 @@
 <header>
     <h2>Add Recipe to Watch</h2>
   </header>
-  <form #recipeItemForm="ngForm" 
-    (ngSubmit)="onSubmit(recipeItemForm.value)">
+  <form 
+    [formGroup]="form"
+    (ngSubmit)="onSubmit(form.value)">
     <ul>
       <li>
         <label for="medium">Medium</label>
-        <select name="medium" id="medium" ngModel>
+        <select name="medium" id="medium" formControlName="medium">
           <option value="Youtube">Youtube</option>
           <option value="Article">Article</option>
         </select>
       </li>
       <li>
         <label for="name">Name</label>
-        <input type="text" name="name" id="name" ngModel>
+        <input type="text" name="name" id="name" formControlName="name">
       </li>
       <li>
         <label for="category">Category</label>
-        <select name="category" id="category" ngModel>
+        <select name="category" id="category" formControlName="category">
           <option value="Breakfast">Breakfast</option>
           <option value="Lunch">Lunch</option>
           <option value="Dinner">Dinner</option>
@@ -27,7 +28,7 @@
       </li>
       <li>
         <label for="year">Year</label>
-        <input type="text" name="year" id="year" maxlength="4" ngModel>
+        <input type="text" name="year" id="year" maxlength="4" formControlName="year">
       </li>
     </ul>
     <button type="submit">Save</button>
