--- a/src/app/recipe-item-form.component.html
+++ b/src/app/recipe-item-form.component.html
@@ -8,8 +8,7 @@
       <li>
         <label for="medium">Medium</label>
         <select name="medium" id="medium" formControlName="medium">
-          <option value="Youtube">Youtube</option>
-          <option value="Article">Article</option>
+          <option *ngFor="let medium of lookupLists.mediums" [value]="medium">{{ medium }}</option>
         </select>
       </li>
       <li>
