--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,18 @@
+<nav>
+    <a>
+      <img src="assets/04.png" class="icon" />
+    </a>
+    <a>
+      <img src="assets/03.png" class="icon" />
+    </a>
+    <a>
+      <img src="assets/02.png" class="icon" />
+    </a>
+  </nav>
 <section>
     <header>
         <h1>Recipe Book</h1>
         <p class="description">Keeping track of the recipes I want to watch and try.</p>
     </header>
-    <rb-recipe-item-form></rb-recipe-item-form>
-    <rb-recipe-item-list></rb-recipe-item-list>
+    <router-outlet></router-outlet>>
 </section>
