--- a/src/app/recipe-item-list.component.html
+++ b/src/app/recipe-item-list.component.html
@@ -8,3 +8,8 @@
     [recipeItem]="recipeItem"
     [ngClass]="{ 'medium-youtube': recipeItem.medium === 'YouTube', 'medium-article': recipeItem.medium === 'Article' }"></rb-recipe-item>
 </section>
+<footer>
+  <a routerLink="/add">
+    <img src="assets/01.png" class="icon">
+  </a>
+</footer>
